--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-legacy": "^6.1.1",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "core-js": "^3.45.0",
